work in progress

--- a/index.html
+++ b/index.html
@@ -3,22 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="images/gt.png">
     <title>Title page</title>
 </head>
-<body style="background-color: rgb(215, 221, 221);">
+<body>
     <h1>This is a Heading</h1>
-
+        <button>
+            <a href="home.html" target="_blank">Home</a>
+        </button>
     <hr>
 
-    <p style="background-color: white; font-size: 15pt;">This is a paragraph <br>This is also another paragraph</p>
+    <p>This is a paragraph <br>This is also another paragraph</p>
     
 
-<pre style="color: rgb(197, 137, 147); background-color: black; font-size: 15pt;">
-    My name is <mark style="background-color: white;color: pink;"><q>Enoch Oppah</q></mark>
+<pre>
+    My name is <mark><q>Enoch Oppah</q></mark>
     I am 31 years of age, reading IT @ UCC
     I love sport and entertainment
     I love anything pink
 </pre>
+
+<a href="home.html" target="_parent"><img src="images/gt.png" alt="gtlogo"></a>
 
 </body>
 </html>
