Work in progress

--- a/home.html
+++ b/home.html
@@ -9,6 +9,46 @@
 </head>
 <body>
     <a href="home.html" target="_blank"><img src="images/gt.png" alt="gtlogo"></a>
+
+    <table>
+        <caption>Family Data</caption>
+        <tr>
+            <th>Name</th>
+            <th>Sex</th>
+            <th>Home Town</th>
+            <th>Date of Birth</th>
+        </tr>
+        <tr>
+            <td>Enoch Oppah</td>
+            <td>Male</td>
+            <td>Mankessim</td>
+            <td>25<sup>th</sup>March, 1992</td>
+        </tr>
+        <tr>
+            <td>Samuel Oppah</td>
+            <td>Male</td>
+            <td>Mankessim</td>
+            <td>25<sup>th</sup>March, 1992</td>
+        </tr>
+        <tr>
+            <td>Sarah Oppah</td>
+            <td>Female</td>
+            <td>Mankessim</td>
+            <td>25<sup>th</sup>March, 1992</td>
+        </tr>
+        <tr>
+            <td>Daniel Oppah</td>
+            <td>Male</td>
+            <td>Mankessim</td>
+            <td>25<sup>th</sup>March, 1992</td>
+        </tr>
+        <tr>
+            <td>Efua Motwuah</td>
+            <td>Female</td>
+            <td>Mankessim</td>
+            <td>25<sup>th</sup>March, 1992</td>
+        </tr>
+    </table>
     
 </body>
 </html>
