--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="script" href="myscript.js">
     <link rel="icon" href="images/gt.png">
     <title>Title page</title>
@@ -11,10 +12,34 @@
 <body>
 
 <nav>
-    <a href="#">About Us</a>
-    <a href="#">Services</a>
-    <a href="#">Purchase</a>
-    <a href="#">Links</a>
+    <a class="drop-down" href="#">About Us
+            <div class="drop-down-content">
+                <li>Mac 1</li>
+                <li>Mac 2</li>
+                <li>Mac 3</li>
+            </div>
+    </a>
+    <a class="drop-down" href="#">Services
+        <div class="drop-down-content">
+            <li>Luandary</li>
+            <li>Massage</li>
+            <li>Cleaning</li>
+        </div>
+    </a>
+    <a class="drop-down" href="#">Purchase
+        <div class="drop-down-content">
+            <li>Sale</li>
+            <li>Pay</li>
+            <li>Earn</li>
+        </div>
+    </a>
+    <a class="drop-down" href="#">Links
+        <div class="drop-down-content">
+            <li>CEO</li>
+            <li>Staff</li>
+            <li>Employees</li>
+        </div>
+    </a>
 </nav>
 
     <h1>This is a Heading</h1>
@@ -130,13 +155,6 @@
 
  <p id="demo">Enoch Oppah is my name</p>
 
- <script>
-    document.getElementById("demo").style.fontSize = "25pt";
-    document.getElementById("demo").style.color = "tomato"
-    document.getElementById("demo").style.border = "none"
-    document.getElementById("demo").style.backgroundColor = "white"
- </script>
-
  <!-- Name form -->
 
 <form>
@@ -174,7 +192,6 @@
 </form>
 
 <!-- Personal details -->
-
 <form action="#">
     <fieldset>
         <legend>Personal Details</legend>
@@ -261,11 +278,23 @@
     <input type="submit" value="Submit" style="margin: 5px;">
 </form>
 
+<form action="#">
+    <input type="search" name="search" placeholder="Search..." style="height: 50px;">
+    <a href="#"><i class="fa fa-search"></i></a>
+</form>
+
 <iframe class="vid" src="video/figma.mp4" frameborder="0"></iframe>
 
 <iframe width="420" height="345"
     src="https://www.youtube.com/embed/tgbNymZ7vqY">
 </iframe>
+
+<script>
+    document.getElementById("demo").style.fontSize = "25pt";
+    document.getElementById("demo").style.color = "tomato"
+    document.getElementById("demo").style.border = "none"
+    document.getElementById("demo").style.backgroundColor = "white"
+ </script>
 
 </body>
 </html>
