Work in progress

--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
 
     <h1>This is a Heading</h1>
 
-        <button>
-            <a href="home.html" target="_blank">Home</a>
+        <button style="margin: 5px;">
+            <a href="home.html" target="_blank">Home&raquo;</a>
         </button>
 
-        <button>
+        <button style="margin: 5px;">
             <a href="#table">Table</a>
         </button>
 
-        <button>
+        <button style="margin: 5px;">
             <a href="#frame">Iframe</a>
         </button>
 
@@ -68,7 +68,9 @@
 </pre>
 
 <figure>
-    <a href="home.html" target="_parent"><img src="images/gt.png" alt="gtlogo"></a>
+    <a href="home.html" target="_parent">
+        <img src="images/gt.png" alt="gtlogo">
+    </a>
     <figcaption>GT Bank Logo</figcaption>
 </figure>
 
@@ -138,9 +140,9 @@
 
  <dl style="margin: 20px;">
     <dt>Boy</dt>
-    <dd>-12 years old</dd>
+        <dd>-12 years old</dd>
     <dt>Girl</dt>
-    <dd>-16 years old</dd>
+        <dd>-16 years old</dd>
  </dl>
 
  <div class="lor">
@@ -219,7 +221,7 @@
         <option value="Hockey">
         <option value="Netball">
     </datalist><br>
-    <textarea name="text" id="text" cols="30" rows="10" style="margin-top: 5px;">Additional Information about sport discipline</textarea><br>
+    <textarea name="text" id="text" cols="30" rows="10" style="margin-top: 5px;">Additional Information about your sport discipline</textarea><br>
     <input type="submit" value="Submit">
 </form>
 
@@ -288,6 +290,27 @@
 <iframe width="420" height="345"
     src="https://www.youtube.com/embed/tgbNymZ7vqY">
 </iframe>
+
+<div class="bar">
+    <li>Man</li>
+    <li>Woman</li>
+    <li>Old</li>
+    <li>Young</li>
+    <li>Child</li>
+    <li>Adult</li>
+</div>
+
+<div class="pagination">
+    <a href="#">&laquo;</a>
+    <a href="#" class="active">1</a>
+    <a href="#">2</a>
+    <a href="#">3</a>
+    <a href="#">4</a>
+    <a href="#">5</a>
+    <a href="#">6</a>
+    <a href="#">7</a>
+    <a href="#">&raquo;</a>
+</div>
 
 <script>
     document.getElementById("demo").style.fontSize = "25pt";
